
[workspace]
members = [
    "helios/cli",
    "helios/client",
    "helios/common",
    "helios/config",
    "helios/consensus",
    "helios/execution",
    "helios/helios-ts",
    "helios/partial_view",
    "helios",
]

default-members = ["helios/cli",]
######################################
# Workspace Dependencies
######################################

[workspace.dependencies]
# consensus
ssz-rs = { package = "ssz_rs", version = "0.9.0" }
milagro_bls = { git = "https://github.com/Snowfork/milagro_bls" }

# execution
ethers = "2.0.2"
revm = { version = "3.3.0", default-features = false, features = ["std", "secp256k1", "serde"] }
triehash-ethereum = { git = "https://github.com/openethereum/parity-ethereum", rev = "55c90d4016505317034e3e98f699af07f5404b63" }

# async/futures
async-trait = "0.1.57"
futures = "0.3.23"
tokio = { version = "1", features = ["rt", "sync", "macros"] }

# io
reqwest = { version = "0.11.13", features = ["json"] }
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.85"

# misc
eyre = "0.6.8"
hex = "0.4.3"
bytes = "1.2.1"
toml = "0.5.9"
log = "0.4.17"
chrono = "0.4.23"
thiserror = "1.0.37"
superstruct = "0.7.0"
openssl = { version = "0.10", features = ["vendored"] }
hyper = "0.14.23"
wasm-timer = "0.2.5"