[package]
name = "ethereum_client"
version = "0.1.0"
authors = ["sogol Malek"]
edition = "2023"

use milagro_bls::Bls;

[dependencies]
ethers = "0.6.1"
tokio = { version = "1", features = ["full"] }
helios = "0.7.1"
env_logger = "0.11.3"

[dependencies]
bls12_381 = "0.5.2"


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
jsonrpsee = { version = "0.15.1", features = ["full"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-timers = "0.2.6"
wasm-bindgen-futures = "0.4.33"

[features]
default = ["std"]



