[package]
name = "ethereum_client"
version = "0.1.0"
authors = ["sogol Malek"]
edition = "2023"

[dependencies]
ethers = "0.6.1"
tokio = { version = "1", features = ["full"] }
helios = "0.7.1"
env_logger = "0.11.3"
bls12_381 = "0.6.0"
blake2 = "0.9.2"
eyre = "0.6.5"
jsonrpsee = { version = "0.15.1", features = ["full"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-timers = "0.2.6"
wasm-bindgen-futures = "0.4.33"

[features]
default = ["std"]
