[package]
name = "partial_view"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio.workspace = true
eyre.workspace = true
log.workspace = true
futures.workspace = true

clap = { version = "3.2.18", features = ["derive", "env"] }
dirs = "4.0.0"
env_logger = "0.9.0"
ctrlc = "3.2.3"

client = { path = "../client" }
config = { path = "../config" }
common = { path = "../common" }
consensus = { path = "../consensus" }
ethers.workspace = true
serde_bytes = "0.11.12"
serde.workspace = true
rmp-serde = "1.1.2"
