[package]
name = "Partialview"
version = "0.4.1"
edition = "2021"

[[bin]]
name = "helios"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
eyre.workspace = true
log.workspace = true
futures.workspace = true
ethers = "4"
tokio = { version = "1", features = ["full"] }
helios = "0.5"
serde = "1"
serde_json = "1"
rmp-serde = "0.15"





client = { path = "../client" }
config = { path = "../config" }
common = { path = "../common" }
